--- a/.github/ISSUE_TEMPLATE/internal-request.yml
+++ b/.github/ISSUE_TEMPLATE/internal-request.yml
@@ -20,6 +20,6 @@ body:
   attributes:
     label: "Describe Work"
     description: "Please describe the work and add any relevant information"
-    placeholder: "Processing vertical sessions issues for the quarter of..."
+    placeholder: "e.g., Processing vertical sessions issues for the quarter of..."
   validations:
       required: true
