--- a/.github/ISSUE_TEMPLATE/resource-request.yml
+++ b/.github/ISSUE_TEMPLATE/resource-request.yml
@@ -7,8 +7,8 @@ body:
   - type: dropdown
     id: resource-type
     attributes:
-      label: Resource type?
-      description: What type of resource you need to be developed or improved?
+      label: "Resource type?"
+      description: "What type of resource you need to be developed or improved?"
       multiple: true
       options:
         - Slides on a topic
@@ -24,15 +24,15 @@ body:
   - type: textarea
     id: need-description
     attributes:
-      label: Please describe your need, especially goals
-      placeholder: e.g., Slides for an AI on Chain Workshop
+      label: "Please describe your need, especially goals"
+      placeholder: "e.g., Slides for an AI on Chain Workshop"
     validations:
       required: true
 
   - type: input
     id: stack-language
     attributes:
-      label: What is the desired language / stack?
-      placeholder: e.g., Backend: Motoko/Rust, Frontend: React/Vue, Other tools: DFX, IC CDK, etc.
+      label: "What is the desired language / stack?"
+      placeholder: "e.g., Backend: Motoko/Rust, Frontend: React/Vue, Other tools: DFX, IC CDK, etc."
     validations:
       required: true
