--- a/.github/ISSUE_TEMPLATE/resource-request.yml
+++ b/.github/ISSUE_TEMPLATE/resource-request.yml
@@ -33,6 +33,6 @@ body:
     id: stack-language
     attributes:
       label: "What is the desired language / stack?"
-      placeholder: "e.g., Backend: Motoko/Rust, Frontend: React/Vue, Other tools: DFX, IC CDK, etc."
+      description: e.g., Backend: Motoko/Rust, Frontend: React/Vue, Other tools: DFX, IC CDK, etc.      
     validations:
       required: true
